Removed all lombok usage from common-test